@startuml
' Définition du style
skinparam class {
  BackgroundColor LightBlue
  ArrowColor Blue
  BorderColor DarkBlue
}

' Entités principales
entity "statistic" as statistic {
  *id : number <<PK>>
  label : string
  value : number
  published_at : datetime
  published_by : string
  country_id : number <<FK>>
  epidemic_id : number <<FK>>
  dayly_wise_id : number <<FK>>
  created_at : datetime
  created_by : string
  updated_at : datetime
  updated_by : string
  deleted_at : datetime
  deleted_by : string
  is_deleted : boolean
}

entity "country" as country {
  *id : number <<PK>>
  name : string
  iso2 : string
  iso3 : string
  population : number
  continent_id : number <<FK>>
  created_at : datetime
  created_by : string
  updated_at : datetime
  updated_by : string
  deleted_at : datetime
  deleted_by : string
  is_deleted : boolean
}

entity "continent" as continent {
  *id : number <<PK>>
  name : string
  code : string
  population : number
  created_at : datetime
  created_by : string
  updated_at : datetime
  updated_by : string
  deleted_at : datetime
  deleted_by : string
  is_deleted : boolean
}

entity "daily_wise" as daily_wise {
  *id : number <<PK>>
  date : date
  province : string
  latitude : number
  longitude : number
  country_id : number <<FK>>
  created_at : datetime
  created_by : string
  updated_at : datetime
  updated_by : string
  deleted_at : datetime
  deleted_by : string
  is_deleted : boolean
}

entity "epidemic" as epidemic {
  *id : number <<PK>>
  name : string
  start_date : date
  end_date : date
  type : string
  pathogen_name : string
  description : text
  transmission_mode : string
  symptoms : text
  reproduction_rate : number
  created_at : datetime
  created_by : string
  updated_at : datetime
  updated_by : string
  deleted_at : datetime
  deleted_by : string
  is_deleted : boolean
}

entity "vaccine" as vaccine {
  *id : number <<PK>>
  name : string
  laboratory : string
  technology : string
  dose : number
  efficacy : number
  storage_temperature : number
  epidemic_id : number <<FK>>
  created_at : datetime
  created_by : string
  updated_at : datetime
  updated_by : string
  deleted_at : datetime
  deleted_by : string
  is_deleted : boolean
}

entity "daily_wise_vaccine" as daily_wise_vaccine {
  *id : number <<PK>>
  daily_wise_id : number <<FK>>
  vaccine_id : number <<FK>>
  created_at : datetime
  created_by : string
  updated_at : datetime
  updated_by : string
  deleted_at : datetime
  deleted_by : string
  is_deleted : boolean
}

entity "user" as user {
  *id : number <<PK>>
  firstname : string
  lastname : string
  username : string
  email : string
  password : string
  gender : string
  birthdate : date
  created_at : datetime
  created_by : string
  updated_at : datetime
  updated_by : string
  deleted_at : datetime
  deleted_by : string
  is_deleted : boolean
}

entity "role" as role {
  *id : number <<PK>>
  name : string
  description : text
  created_at : datetime
  created_by : string
  updated_at : datetime
  updated_by : string
  deleted_at : datetime
  deleted_by : string
  is_deleted : boolean
}

entity "user_role" as user_role {
  *id : number <<PK>>
  user_id : number <<FK>>
  role_id : number <<FK>>
  created_at : datetime
  created_by : string
  updated_at : datetime
  updated_by : string
  deleted_at : datetime
  deleted_by : string
  is_deleted : boolean
}

' Relations avec cardinalités
country }|--|| continent : "1,1 à 0,N"
daily_wise }|--|| country : "1,1 à 0,N"
statistic }|--|| country : "1,1 à 0,N"
statistic }|--|| epidemic : "1,1 à 0,N"
statistic }|--|| daily_wise : "1,1 à 0,N"
vaccine }|--|| epidemic : "1,1 à 0,N"
daily_wise_vaccine }|--|| daily_wise : "1,1 à 0,N"
daily_wise_vaccine }|--|| vaccine : "1,1 à 0,N"
user_role }|--|| user : "1,1 à 0,N"
user_role }|--|| role : "1,1 à 0,N"

@enduml